Update media controls time formatting to use hours

Bug: 739152
Change-Id: Ibed50426593dff0c5541a3a9c88a0b6229a896b3