third_party/WebKit/Source/modules/media_controls/elements/MediaControlTimeDisplayElement.cpp
@@ -15,10 +15,38 @@ MediaControlTimeDisplayElement::MediaControlTimeDisplayElement(
 
 void MediaControlTimeDisplayElement::SetCurrentValue(double time) {
   current_value_ = time;
+  setInnerText(FormatTime(), ASSERT_NO_EXCEPTION);
 }
 
 double MediaControlTimeDisplayElement::CurrentValue() const {
   return current_value_;
+}
+
+String MediaControlTimeDisplayElement::FormatTime() const {
+  double time = std::isfinite(current_value_) ? current_value_ : 0;
+
+  int seconds = static_cast<int>(fabs(time));
+  int minutes = seconds / 60;
+  int hours = minutes / 60;
+
+  seconds %= 60;
+  minutes %= 60;
+
+  const char* negative_sign = (time < 0 ? "-" : "");
+
+  // [0-10) minutes duration is m:ss
+  // [10-60) minutes duration is mm:ss
+  // [1-10) hours duration is h:mm:ss
+  // [10-100) hours duration is hh:mm:ss
+  // [100-1000) hours duration is hhh:mm:ss
+  // etc.
+
+  if (hours > 0) {
+    return String::Format("%s%d:%02d:%02d", negative_sign, hours, minutes,
+                          seconds);
+  }
+
+  return String::Format("%s%d:%02d", negative_sign, minutes, seconds);
 }
 
 }  // namespace blink
